Nav bar style update - overlap fix

--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,7 @@ body {
 	margin-right: 10%; 
 	/*
 	background-color: black; 
+	color: white;
 	*/
 }
 
@@ -60,11 +61,13 @@ ul {
 	position: sticky;
 	top: 0;
 	border-radius: 8px;
+	z-index: 99;
 }
 
 /* this is causing style problems with my jqueryHomePage, accordian display #2....*/
 li {
 	float: left;
+	color: black;
 }
 
 li a {
